# cxxindex

./: .gitignore  Main.hs  README.md
Model/: CType.hs  Query.hs
QueryLang/: CMakeLists.txt
QueryLang/doc/: query_examples.md
QueryLang/src/: main.cpp
auto-resolver/: CMakeLists.txt  CMakePresets.json  main.cpp
backend/: LICENSE  backend.cabal  makeindex  package.yaml
backend/app/: Main.hs
backend/print/: Print.hs
backend/src/: Lib.hs
backend/src/Match/: Unify.hs
backend/src/Model/: CType.hs  Query.hs
backend/src/QueryParser/: Lexer.hs  Parser.hs
backend/test/: Spec.hs
test/data/: basic_1.hpp  concepts.hpp  inheritance.hpp  template_class.hpp  template_func.hpp
tool/: BUILDING.md  CMakeLists.txt  CMakePresets.json  main.cpp
tool/test/: a.cpp  vector.cpp
